@@ -5,72 +5,81 @@ import org.bukkit.ChatColor;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
-import org.bukkit.configuration.file.FileConfiguration;
+import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.EntityType;
 import org.bukkit.entity.Player;
 import org.bukkit.plugin.Plugin;
 
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
-public class EntityAttributeCommand implements CommandExecutor {
+public class EntityAttributeCommand implements CommandExecutor, TabCompleter {
 
     private final Plugin plugin;
     private final EntityAttributeHandler entityAttributeHandler;
     private final Set<EntityType> disallowedEntityTypes;
+    private final me.baddcamden.attributeutils.api.AttributeFacade attributeFacade;
+    private final CommandMessages messages;
 
-    public EntityAttributeCommand(Plugin plugin, EntityAttributeHandler entityAttributeHandler) {
+    public EntityAttributeCommand(Plugin plugin, EntityAttributeHandler entityAttributeHandler, me.baddcamden.attributeutils.api.AttributeFacade attributeFacade) {
         this.plugin = plugin;
         this.entityAttributeHandler = entityAttributeHandler;
+        this.attributeFacade = attributeFacade;
+        this.messages = new CommandMessages(plugin);
         this.disallowedEntityTypes = loadDisallowedTypes();
     }
 
     @Override
     public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
         if (!sender.hasPermission("attributeutils.command.entities")) {
-            sender.sendMessage(formatMessage("messages.entity-command.no-permission", Map.of(),
+            sender.sendMessage(messages.format("messages.entity-command.no-permission", Map.of(),
                     ChatColor.RED + "You do not have permission to spawn attributed entities."));
             return true;
         }
 
         if (!(sender instanceof Player player)) {
-            sender.sendMessage(formatMessage("messages.entity-command.invalid-sender", Map.of(),
+            sender.sendMessage(messages.format("messages.entity-command.invalid-sender", Map.of(),
                     ChatColor.RED + "Only players can spawn attributed entities."));
             return true;
         }
 
         if (args.length < 3) {
-            sender.sendMessage(formatMessage("messages.entity-command.usage", Map.of("label", label),
+            sender.sendMessage(messages.format("messages.entity-command.usage", Map.of("label", label),
                     ChatColor.YELLOW + "Usage: /" + label + " <entityType> <plugin.key> <value> [cap=<cap> ...]"));
             return true;
         }
 
         EntityType entityType = resolveEntityType(args[0]);
         if (entityType == null) {
-            sender.sendMessage(formatMessage("messages.entity-command.invalid-entity", Map.of("entity", args[0]),
+            sender.sendMessage(messages.format("messages.entity-command.invalid-entity", Map.of("entity", args[0]),
                     ChatColor.RED + "Unknown entity type '" + args[0] + "'."));
             return true;
         }
 
         if (disallowedEntityTypes.contains(entityType) || !entityType.isSpawnable()) {
-            sender.sendMessage(formatMessage("messages.entity-command.disallowed-entity", Map.of("entity", entityType.name()),
+            sender.sendMessage(messages.format("messages.entity-command.disallowed-entity", Map.of("entity", entityType.name()),
                     ChatColor.RED + "That entity type cannot be spawned with attributes."));
             return true;
         }
 
         if (player.getWorld() == null) {
-            sender.sendMessage(formatMessage("messages.entity-command.missing-world", Map.of(),
+            sender.sendMessage(messages.format("messages.entity-command.missing-world", Map.of(),
                     ChatColor.RED + "Could not resolve your world to spawn the entity."));
             return true;
         }
 
-        List<CommandParsingUtils.AttributeDefinition> definitions = CommandParsingUtils.parseAttributeDefinitions(sender, args,
-1);
+        List<CommandParsingUtils.AttributeDefinition> definitions = CommandParsingUtils.parseAttributeDefinitions(
+                sender,
+                args,
+                1,
+                messages,
+                key -> attributeFacade.getDefinition(key).isPresent());
         if (definitions.isEmpty()) {
             return true;
         }
@@ -80,16 +89,16 @@ public class EntityAttributeCommand implements CommandExecutor {
             result = entityAttributeHandler.spawnAttributedEntity(player.getLocation(), entityType, definitions);
         } catch (IllegalArgumentException ex) {
             if ("invalid-location".equalsIgnoreCase(ex.getMessage())) {
-                sender.sendMessage(formatMessage("messages.entity-command.missing-world", Map.of(),
+                sender.sendMessage(messages.format("messages.entity-command.missing-world", Map.of(),
                         ChatColor.RED + "Could not resolve your world to spawn the entity."));
                 return true;
             }
-            sender.sendMessage(formatMessage("messages.entity-command.unknown-attribute", Map.of("attribute", ex.getMessage()),
+            sender.sendMessage(messages.format("messages.entity-command.unknown-attribute", Map.of("attribute", ex.getMessage()),
                     ChatColor.RED + "Unknown attribute '" + ex.getMessage() + "'."));
             return true;
         } catch (Exception ex) {
             plugin.getLogger().warning("Failed to spawn attributed entity: " + ex.getMessage());
-            sender.sendMessage(formatMessage("messages.entity-command.spawn-failed", Map.of(),
+            sender.sendMessage(messages.format("messages.entity-command.spawn-failed", Map.of(),
                     ChatColor.RED + "An error occurred while spawning the entity."));
             return true;
         }
@@ -97,7 +106,7 @@ public class EntityAttributeCommand implements CommandExecutor {
         Map<String, String> placeholders = new HashMap<>();
         placeholders.put("entity", entityType.name());
         placeholders.put("attributes", result.summary());
-        sender.sendMessage(formatMessage("messages.entity-command.spawned", placeholders,
+        sender.sendMessage(messages.format("messages.entity-command.spawned", placeholders,
                 ChatColor.GREEN + "Spawned " + entityType.name() + " with attributes: " + result.summary()));
         return true;
     }
@@ -117,7 +126,7 @@ public class EntityAttributeCommand implements CommandExecutor {
     private Set<EntityType> loadDisallowedTypes() {
         List<String> configured = plugin.getConfig().getStringList("entity-command.disallowed-entities");
         if (configured.isEmpty()) {
-            return Collections.emptySet();
+            return Set.of();
         }
 
         Set<EntityType> result = new HashSet<>();
@@ -130,15 +139,50 @@ public class EntityAttributeCommand implements CommandExecutor {
         return result;
     }
 
-    private String formatMessage(String path, Map<String, String> placeholders, String fallback) {
-        FileConfiguration config = plugin.getConfig();
-        String message = config.getString(path, fallback);
-        if (message == null || message.isBlank()) {
-            message = fallback;
+    @Override
+    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
+        if (args.length == 1) {
+            return filter(entityNames(), args[0]);
         }
-        for (Map.Entry<String, String> entry : placeholders.entrySet()) {
-            message = message.replace("{" + entry.getKey() + "}", entry.getValue());
+
+        if (args.length >= 2) {
+            int relativeIndex = args.length - 2;
+            if (relativeIndex % 3 == 0 || args[args.length - 1].startsWith("cap=")) {
+                return filter(attributeKeys(), args[args.length - 1]);
+            }
+            if (relativeIndex % 3 == 2) {
+                List<String> options = new ArrayList<>(attributeKeys());
+                options.add("cap=");
+                return filter(options, args[args.length - 1]);
+            }
         }
-        return ChatColor.translateAlternateColorCodes('&', message);
+
+        return List.of();
+    }
+
+    private List<String> attributeKeys() {
+        return attributeFacade.getDefinitions().stream()
+                .map(me.baddcamden.attributeutils.model.AttributeDefinition::id)
+                .sorted()
+                .toList();
+    }
+
+    private List<String> entityNames() {
+        return java.util.Arrays.stream(EntityType.values())
+                .filter(EntityType::isSpawnable)
+                .map(EntityType::name)
+                .sorted()
+                .collect(Collectors.toList());
+    }
+
+    private List<String> filter(List<String> options, String prefix) {
+        String lower = prefix.toLowerCase(Locale.ROOT);
+        List<String> matches = new ArrayList<>();
+        for (String option : options) {
+            if (option.toLowerCase(Locale.ROOT).startsWith(lower)) {
+                matches.add(option);
+            }
+        }
+        return matches;
     }
 }
